guestbook/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  - port: 9080
    targetPort: 80
  selector:
    app: guestbook-ui
