guestbook/base/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook-ui
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-ui-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: guestbook-ui
        port:
          number: 9080
